# bfi-imax-monitor

./: .gitignore  config.json  monitor.py  pyproject.toml  scrape_to_csv.py
data/: 0146424F-FF2C-4CF1-86EB-CB55E12950B3.csv  019061EF-F619-4EA5-9FB0-3F8B21C9157A.csv  02A54005-9FC1-4AB5-BC60-7DA5747516E4.csv  02B5F53E-8905-4FE1-BC7F-B55D9601B26F.csv  0566E597-9C40-4D27-807B-8AC8B5FCCE66.csv  0598A286-58BE-4C9D-BCD2-65DC34073890.csv  06C373F1-3863-4E69-A5C5-3B05FE6F0E87.csv  079B4C12-F967-420B-AC48-7082B020826B.csv  0BEF808C-97DA-4074-8ED8-1FCA2FBCA413.csv  0C608C5F-F223-4525-9D85-76A555D7735F.csv  0C82913C-F01B-46B3-9C0B-6CB8D0BD8F93.csv  0D100FC3-BD75-477D-934D-9231B5359258.csv  0F9DB5DA-5849-4CEF-A196-3F4C03755B36.csv  0FAC28CC-9655-4F38-A4A7-C9F62D285555.csv  11DDD589-2B63-4B01-852C-478A2EA98758.csv  12EB5A71-FFD3-4743-AED5-2D0414452A1A.csv  134EFBB7-8D30-484C-8586-C075AD08DD27.csv  1405A813-12FD-4740-B83D-07E579962A00.csv  14379FDE-8388-4B0D-8506-7A9FB479E6AC.csv  1511358C-0254-40DE-BEB0-951FDC4B7885.csv  15B12EC2-43CB-46C6-9EFC-FDA6520617DA.csv  17D00DC7-3E0D-4A30-87CA-156E4CF9E8B8.csv  17F3E719-8360-483C-8A14-5AD234F718C8.csv  181AF826-3864-41B7-9FD4-80E77CB42964.csv  181DAD5E-DC5F-4CB5-B39A-4976CFF327C8.csv  18BD28EA-44DB-4C3D-872C-A0C062886DC1.csv  1ACB76B8-EAD8-42E7-B73C-9BC56EC1C630.csv  1CA5BF5A-365F-483B-85D4-BCC33D5EE94E.csv  1F226E31-4079-40A5-B143-DF67DBEADEB1.csv  1F3DADBE-0085-4337-8A43-A39B1EA8BEC2.csv  20E29775-4D75-4641-93C1-C6222FA50846.csv  21AC3EAD-D2B1-4B6D-8952-05BFCBACE978.csv  23FE1A9D-D928-484D-BD8B-0FE6AA886132.csv  (+198 more)
site/: next.config.ts  (+2 more)
(+10 files in other folders)
