[project]
name = "bfi-imax-monitor"
version = "0.1.0"
description = "Monitor BFI IMAX seat availability and alert when prime seats open up"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40",
    "rich>=13.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
bfi-monitor = "monitor:main"
